@startuml

title __FXPAGES's Class Diagram__\n

  namespace  {
    namespace xPages {
      class FxPages.Chart {
          + Chart()
          {static} ~ createBarChart()
      }
    }
  }
  

  namespace  {
    namespace xPages {
      class FxPages.InitialPage {
          - botLane : VBox
          - btn : Button
          - imageView : ImageView
          - midLane : VBox
          - names : Label
          - stage : Stage
          - title : Label
          + InitialPage()
          - setUpButton()
          - setUpImages()
          - setUpLabels()
          - setUpStruct()
      }
    }
  }
  

  namespace  {
    namespace xPages {
      class FxPages.LoadGraph {
          - btn : Button
          - btn1 : Button
          - label : Label
          - stage : Stage
          - textField : TextField
          + LoadGraph()
          + startGraphView()
          - setPositions()
          - setUpButtons()
          - setUpLabel()
          - setUpTextField()
      }
    }
  }
  

  namespace  {
    namespace xPages {
      class FxPages.Save {
          - button : Button
          - directGraph : DirectGraph<Webpage, Connection>
          - filename : TextField
          - label : Label
          + Save()
          - setButton()
          - setFilename()
          - setLabel()
          - setPositions()
      }
    }
  }
  

  namespace  {
    namespace xPages {
      class FxPages.SavesPage {
          - btn1 : Button
          - btn2 : Button
          - question : Label
          - stage : Stage
          ~ SavesPage()
          - setButtonActions()
          - setPositions()
          - setQuestion()
      }
    }
  }
  

  namespace  {
    namespace xPages {
      class FxPages.Secondary {
          - auto : RadioButton
          - botLane : VBox
          - btn : Button
          - group : ToggleGroup
          - initialWebsite : TextField
          - isInteraticve : boolean
          - iteractive : RadioButton
          - midLane : VBox
          - stage : Stage
          + getLink()
          ~ Secondary()
          - setButtonActions()
          - setInteractive()
          - setUpButton()
          - setUpConnections()
          - setUpTextField()
          - setUpToggles()
          - setUpVBoxs()
      }
    }
  }
  

  namespace  {
    namespace xPages {
      class FxPages.Statistics {
          - chart : BarChart<String, Number>
          - mostReferencedPage : Label
          - notFoundWebSites : Label
          - title : Label
          - top5 : Label
          - visitedPages : Label
          + Statistics()
          + resetLabels()
          + setMostReferencedPage()
          + setNotFoundWebSites()
          + setPositions()
          + setTexts()
          + setTop5()
          + setVisitedPages()
      }
    }
  }
  

  namespace  {
    namespace xPages {
      class FxPages.TreeView {
          - g : DirectGraph<Webpage, Connection>
          - graphView : SmartGraphPanel<Webpage, Connection>
          + TreeView()
          - setNodes()
      }
    }
  }
  

  FxPages.InitialPage -up-|> javafx.scene.layout.BorderPane
  FxPages.LoadGraph -up-|> javafx.scene.layout.BorderPane
  FxPages.Save -up-|> javafx.scene.layout.BorderPane
  FxPages.SavesPage -up-|> javafx.scene.layout.BorderPane
  FxPages.Secondary -up-|> javafx.scene.layout.BorderPane
  FxPages.Statistics -up-|> javafx.scene.layout.BorderPane
  FxPages.TreeView -up-|> javafx.scene.layout.VBox
  FxPages.TreeView o-- GraphViewPackage.SmartPlacementStrategy : strategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
